welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:12: error: not found: value avnavce
  avnavce(6)
  ^MethodsDogHouse:19: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:25: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:35: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:45: error: not found: value dogHouse
		dogHouse();		
                ^