welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def maisons() {
  baisseBrosse()
  for(compteur1 <- 1 to 4){
    avance(2)
    gauche()
  }
  leveBrosse()
}

for(compteur1 <-1 to 4){
  maisons()
  avnavce(6)
}